polished the site

--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -1548,7 +1548,7 @@
                 <div class="w-full lg:max-w-2xl">
                     <div class="iframe-container">
                         <img 
-                            src="assets/qara-altasees.png" 
+                            src="assets/qarar-altasees.png" 
                             alt="قرار التأسيس لجمعية تبيان لخدمة ضيوف الرحمن"
                             class="w-full h-auto max-h-[300px] sm:max-h-[400px] lg:max-h-[500px] xl:max-h-[600px] object-contain border border-gray-300 rounded-lg shadow-md bg-white">
                     </div>
@@ -1562,8 +1562,8 @@
                         <p class="text-xs sm:text-sm text-gray-600 mb-2 sm:mb-4 px-2">اضغط على الرابط أدناه لتحميل نسخة من قرار التأسيس</p>
                     </div>
                     
-                    <a href="assets/qara-altasees.png" 
-                       download="assets/qara-altasees.png"
+                    <a href="assets/qarar-altasees.png" 
+                       download="assets/qarar-altasees.png"
                        class="bg-[#00a17d] text-white px-4 sm:px-6 py-2 sm:py-3 rounded-lg hover:bg-[#00a17d]/80 transition-colors inline-flex items-center text-sm sm:text-base">
                         <i class="fas fa-file-pdf ml-2"></i>
                         تحميل PDF
@@ -1582,13 +1582,13 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 text-xs sm:text-sm text-gray-600">
                     <div class="space-y-1 sm:space-y-2">
                         <p><strong>اسم الجمعية:</strong> جمعية تبيان لخدمة ضيوف الرحمن</p>
-                        <p><strong>نوع النشاط:</strong> جمعية خيرية قرآنية</p>
+                        <p><strong>نوع النشاط:</strong> جمعية اهلية</p>
                         <p><strong>الموقع:</strong> المملكة العربية السعودية</p>
                     </div>
                     <div class="space-y-1 sm:space-y-2">
                         <p><strong>تاريخ التسجيل:</strong> مسجل رسمياً</p>
                         <p><strong>الحالة:</strong> نشط</p>
-                        <p><strong>الاختصاص:</strong> تعليم القرآن الكريم</p>
+                        <p><strong>الاختصاص:</strong> جمعية اهلية  </p>
                     </div>
                 </div>
             </div>
