--- a/index.html
+++ b/index.html
@@ -1579,10 +1579,9 @@
                 <div class="w-full md:w-1/2 text-center max-w-2xl mx-auto md:mx-0">
                     <h2 class="text-2xl md:text-3xl font-bold text-[#6e1948] mb-4">من نحن</h2>
                     <p class="text-gray-700 leading-8">
-                    
-                    جمعية تبيان لخدمة ضيوف الرحمن حماية الشباب والفتيات، جمعية مسجلة رسمياً لدى المركز الوطني لتنمية القطاع غير الربحي تحت الترخيص رقم 5388، ومقرنا الرئيسي في جدة، منطقة مكة المكرمة. تأسست الجمعية بناءً على القرار الصادر بتاريخ 1445/02/11هـ، تماشياً مع نظام الجمعيات والمؤسسات الأهلية الصادر بالمرسوم الملكي رقم (م/٨) وتاريخ ١٤٣٧/٢/١٩هـ، ولائحته التنفيذية.
-                    تهدف الجمعية إلى تمكين الشباب والفتيات وتنمية مهاراتهم، وتعزيز مشاركتهم في المجتمع، بما يتوافق مع رؤية المملكة 2030 في تنمية القطاع غير الربحي ودعم المبادرات الشبابية.
-                </p>
+                   جمعية أهلية غير ربحية مرخّصة من المركز الوطني لتنمية القطاع غير الربحي برقم (5490)، مقرّها منطقة مكة المكرمة – مكة، تُعنى بخدمة ضيوف الرحمن وتقديم المبادرات التي تسهم في تحسين تجربتهم أثناء أدائهم المناسك، عبر برامج ميدانية وخدمات نوعية ترتبط بالضيافة والإرشاد والدعم.
+
+نعمل وفق معايير الحوكمة والشفافية، وبالشراكات مع الجهات ذات العلاقة، لنقدم خدمة ترتقي لمكانة الحاج والمعتمر في هذه البلاد المباركة.                </p>
                 </div>
             </div>
         </section>
@@ -1697,9 +1696,9 @@
                             </div>
                         </div>
                         <div class="md:order-1">
-                            <h3 class="text-2xl font-bold text-primary mb-3">رحلة النور</h3>
+                            <h3 class="text-2xl font-bold text-primary mb-3">برنامج خدمة المعتكفين</h3>
                             <p class="text-gray-700 leading-8">
-                                ببرنامج تربوي دعوي للمدينة المنورة تنظمه الجمعية بمشاركة 50 شاباً. يجمع بين العبادة في المسجد النبوي ودراسة السيرة النبوية وبناء الشخصية. يهدف إلى تعزيز القيم الإسلامية وتنمية الروحانية وبناء جيل واعٍ متمسك بهويته.
+                               برنامج “خدمة المعتكفين” هو برنامج موسمي تُقدّمه الجمعية خلال العشر الأواخر من شهر رمضان المبارك، يهدف إلى دعم المعتكفين داخل الحرم والمساجد المخصصة للاعتكاف، وتوفير الاحتياجات الأساسية لهم من خدمات مساندة وتنظيمية تسهّل عليهم التفرّغ للعبادة والذكر وقيام الليل.
                             </p>
                         </div>
                         <span class="timeline-marker" aria-hidden="true">01</span>
@@ -1713,10 +1712,9 @@
                             </div>
                         </div>
                         <div class="md:order-2">
-                            <h3 class="text-2xl font-bold text-primary mb-3">برنامج سفراء</h3>
+                            <h3 class="text-2xl font-bold text-primary mb-3">برنامج تفطير الصائمين</h3>
                             <p class="text-gray-700 leading-8">
-                              برنامج "دعوة الشباب" هو مبادرة نوعية تهدف إلى استقطاب الشباب والفتيات وتأهيلهم ليكونوا سفراء للتغيير الإيجابي في مجتمعاتهم. يجمع البرنامج بين الأسس الشرعية والمنهجية العصرية لبناء الشخصية المسلمة المتكاملة.
-                            </p>
+                             برنامج تفطير الصائمين هو أحد البرامج الموسمية التي تنفذها الجمعية لخدمة ضيوف الرحمن خلال شهر رمضان المبارك، ويهدف إلى توفير وجبات إفطار جاهزة للصائمين من الحجاج والمعتمرين والزوار، داخل نطاق مكة المكرمة والمواقع المرتبطة بالحرم، بما يعزز قيمة الضيافة والكرم، ويساهم في تيسير عبادتهم وأداء مناسكهم براحة وطمأنينة.                            </p>
                         </div>
                         <span class="timeline-marker" aria-hidden="true">02</span>
                     </div>
@@ -1729,9 +1727,9 @@
                             </div>
                         </div>
                         <div class="md:order-1">
-                            <h3 class="text-2xl font-bold text-primary mb-3">برنامج تبيان لخدمة ضيوف الرحمن</h3>
+                            <h3 class="text-2xl font-bold text-primary mb-3">برنامج رحلات العمرة</h3>
                             <p class="text-gray-700 leading-8">
-                               تقدم جمعيتنا رحلات وتجارب نوعية تدمج بين المتعة والتعلم، تشمل رحلات استكشافية وتطوعية وثقافية. تهدف إلى تنمية مهارات الشباب وغرس القيم الإيجابية من خلال تجارب عملية محفزة، بإشراف متخصصين وبيئة آمنة تدعم بناء الشخصية المتكاملة.                            </p>
+                             برنامج “رحلات العمرة” هو أحد برامج الجمعية لخدمة ضيوف الرحمن، حيث يتم تنظيم رحلات عمرة للمستفيدين بطريقة منظّمة وميسّرة، تبدأ من مرحلة التنسيق والتسجيل، مرورًا بتوفير وسائل النقل المناسبة، ووصولًا إلى تقديم الإرشاد والتوجيه أثناء أداء المناسك.
                         </div>
                         <span class="timeline-marker" aria-hidden="true">03</span>
                     </div>
