--- a/error.html
+++ b/error.html
@@ -32,7 +32,7 @@
     <h1 class="text-2xl md:text-3xl font-bold text-primary mb-3">عذراً، حدث خطأ غير متوقع</h1>
     <p class="text-gray-600 mb-8">نرجو المحاولة لاحقًا. يمكنك العودة إلى الصفحة الرئيسية من خلال الزر أدناه.</p>
     <div class="flex items-center justify-center gap-3">
-      <a href="index.html" class="btn-accent px-6 py-3 rounded-lg font-bold">العودة للرئيسية</a>
+  <a href="/main" class="btn-accent px-6 py-3 rounded-lg font-bold">العودة للرئيسية</a>
       <button type="button" onclick="location.reload()" class="btn-primary px-6 py-3 rounded-lg font-bold">إعادة المحاولة</button>
     </div>
   </main>
