--- a/annual-report-2024.html
+++ b/annual-report-2024.html
@@ -1346,6 +1346,18 @@
             <style>
                 .hover-green:hover { color: var(--color-primary); }
             </style>
+    <style>
+        /* Make the mobile menu scrollable on phones (iOS-friendly) */
+        @media (max-width: 1024px) {
+            #mobile-menu {
+                /* baseline: allow inner scrolling even if JS doesn't run */
+                max-height: calc(100vh - 72px);
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch; /* momentum scroll on iOS */
+                overscroll-behavior: contain;      /* prevent body scroll chaining */
+            }
+        }
+    </style>
 </head>
 <body class="bg-gray-50">
 
