--- a/contact.html
+++ b/contact.html
@@ -1563,7 +1563,7 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="section-header-container">
                 <h1 class="text-3xl md:text-4xl font-extrabold text-primary curved-underline gold">تواصل معنا</h1>
-                <p class="section-subtitle text-gray-600 max-w-3xl mx-auto">يسعدنا استقبال استفساراتكم ومقترحاتكم، ونسعى للرد خلال يومي عمل. يمكنكم التواصل عبر القنوات التالية.</p>
+                <p class="section-subtitle text-gray-600 max-w-3xl mx-auto">يسعدنا استقبال استفساراتكم ومقترحاتكم وشكاويكم، ونسعى للرد خلال يومي عمل. يمكنكم التواصل عبر القنوات التالية.</p>
             </div>
 
             <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3 mb-12">
@@ -1602,7 +1602,6 @@
                     </div>
                     <div class="flex flex-wrap gap-3 mt-2">
                         <a href="#" aria-label="Facebook" class="w-10 h-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center hover:bg-primary hover:text-white transition"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" aria-label="Twitter" class="w-10 h-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center hover:bg-primary hover:text-white transition"><i class="fab fa-x-twitter"></i></a>
                         <a href="#" aria-label="Instagram" class="w-10 h-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center hover:bg-primary hover:text-white transition"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn" class="w-10 h-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center hover:bg-primary hover:text-white transition"><i class="fab fa-linkedin-in"></i></a>
                     </div>
