--- a/goals.html
+++ b/goals.html
@@ -1574,7 +1574,7 @@
                 <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-4">
                     <div class="bg-white border border-gray-200 rounded-2xl p-5 shadow-sm">
                         <div class="flex items-center gap-3 mb-3">
-                            <span class="w-10 h-10 rounded-full bg-primary/10 text-primary grid place-items-center"><i class="fa-solid fa-sparkles"></i></span>
+                            <span class="w-10 h-10 rounded-full bg-primary/10 text-primary grid place-items-center"><i class="fa-solid fa-chalkboard-user"></i></span>
                             <h3 class="font-bold text-primary">تعزيز جودة الخدمات</h3>
                         </div>
                         <p class="text-sm text-gray-700">رفع كفاءة وجودة الخدمات المقدمة لضيوف الرحمن عبر معايير أداء واضحة وتطوير مستمر.</p>
