--- a/work-team.html
+++ b/work-team.html
@@ -1565,7 +1565,7 @@
                 <div class="w-full lg:max-w-2xl">
                     <div class="iframe-container">
                         <img 
-                            src="assets/leadership.png" 
+                            src="assets/leadership.jpeg" 
                             alt="الإدارة التنفيذية لجمعية تبيان لخدمة ضيوف الرحمن"
                             class="w-full h-auto max-h-[300px] sm:max-h-[400px] lg:max-h-[500px] xl:max-h-[600px] object-contain border border-gray-300 rounded-lg shadow-md bg-white">
                     </div>
@@ -1579,8 +1579,8 @@
                         <p class="text-xs sm:text-sm text-gray-600 mb-2 sm:mb-4 px-2">اضغط على الرابط أدناه لتحميل نسخة من صورة الإدارة التنفيذية</p>
                     </div>
                     
-                    <a href="assets/leadership.png" 
-                       download="assets/leadership.jpg"
+                    <a href="assets/leadership.jpeg" 
+                       download="assets/leadership.jpeg"
                        class="bg-[#00a17d] text-white px-4 sm:px-6 py-2 sm:py-3 rounded-lg hover:bg-[#00a17d]/80 transition-colors inline-flex items-center text-sm sm:text-base">
                         <i class="fas fa-file-pdf ml-2"></i>
                         تحميل PDF
