--- a/general-assembly.html
+++ b/general-assembly.html
@@ -1570,7 +1570,7 @@
                 <div class="w-full lg:max-w-2xl">
                     <div class="iframe-container">
                         <img 
-                            src="assets/orgs.png" 
+                            src="assets/orgs.jpeg" 
                             alt="الجمعية العمومية لجمعية تبيان لخدمة ضيوف الرحمن"
                             class="w-full h-auto max-h-[300px] sm:max-h-[400px] lg:max-h-[500px] xl:max-h-[600px] object-contain border border-gray-300 rounded-lg shadow-md bg-white">
                     </div>
@@ -1584,8 +1584,8 @@
                         <p class="text-xs sm:text-sm text-gray-600 mb-2 sm:mb-4 px-2">اضغط على الرابط أدناه لتحميل نسخة من صورة الجمعية العمومية</p>
                     </div>
 
-                    <a href="assets/orgs.png" 
-                       download="assets/orgs.png"
+                    <a href="assets/orgs.jpeg" 
+                       download="assets/orgs.jpeg"
                        class="bg-[#00a17d] text-white px-4 sm:px-6 py-2 sm:py-3 rounded-lg hover:bg-[#00a17d]/80 transition-colors inline-flex items-center text-sm sm:text-base">
                         <i class="fas fa-file-pdf ml-2"></i>
                         تحميل PDF
