--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@
                 <div class="w-full md:w-1/2 flex justify-center md:justify-start">
                     <div class="relative w-full bg-gray-100" style="max-width: 600px; border: 1px solid #e5e7eb; border-radius: 36px 10px 36px 10px; overflow: hidden;">
                         <!-- Decorative blocked corner -->
-                        <div class="absolute top-0 right-0 w-0 h-0" style="border-left: 70px solid transparent; border-bottom: 70px solid var(--color-accent);"></div>
+                        <div class="absolute top-0 right-0 w-0 h-0" style="border-left: 70px solid transparent;"></div>
                         <img src="assets/hero.jpg" alt="" class="block w-full h-auto">
                     </div>
                 </div>
@@ -1614,7 +1614,7 @@
             <div class="max-w-7xl mx-auto px-4">
                 <div class="fade-in">
                     <div class="section-header-container">
-                        <h2 class="text-4xl font-bold text-white curved-underline gold">تبيان لخدمة ضيوف الرحمن بالأرقام</h2>
+                        <h2 class="text-4xl font-bold text-white curved-underline gold">تبيان لخدمة ضيوف الرحمن في أرقام</h2>
                         <p class="text-xl text-white section-subtitle">نعمل معاً لبناء مجتمع أفضل</p>
                     </div>
                 </div>
@@ -1652,7 +1652,7 @@
                         <div class="achievement-number-simple">
                             <div class="counter" data-target="5000"><span class="suffix">+</span>0</div>
                         </div>
-                        <p>وجوه تعرفنا جيداً، وأُسر وجدت في تبيان لخدمة ضيوف الرحمن سنداً دائماً.</p>
+                        <p>وجوه تعرفنا جيداً، ومجتمع وجد في تبيان لخدمة ضيوف الرحمن سنداً دائماً.</p>
                         <footer>
                             <strong>امتداد</strong>
                             <span>لشراكات محلية وعطاء مستمر</span>
@@ -1674,7 +1674,7 @@
                         <p>لقاءات وورش ودورات تنسج جسوراً بين المعرفة والعمل.</p>
                         <footer>
                             <strong>تنظيم</strong>
-                            <span>بفريق نسائي وشبابي متطوع</span>
+                            <span>بفريق من المتطوعين</span>
                         </footer>
                     </article>
                     <article class="achievement-tile fade-in">
